<resources>
    <string name="app_name">Intent01</string>
    <string name="input_memo">キーワード入力</string>
    <string name="hint_input_memo">ここにキーワードを入力します</string>
    <string name="lb_please_input_keyword">キーワードを入力してください。</string>
    <string name="lb_activity_not_found">開くことのできるアプリが見つかりませんでした。</string>
    <string name="lb_menu_web">ウェブで検索</string>
    <string name="lb_menu_googlemap">GoogleMAP検索</string>
    <string name="lb_menu_yahoo">Yahoo!検索</string>
    <string name="lb_menu_amazon">Amazon検索</string>
    <string name="lb_menu_rakuten">楽天市場検索</string>
    <string name="lb_menu_wiki">ウィキペディア検索</string>
</resources>